[package]
name = "yugodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yugodb"
path = "src/lib.rs"


[dependencies]
bincode = "1.3.3"
bson = "2.10.0"
itertools = "0.13.0"
l = "0.1.0"
parking_lot = "0.12.3"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
